src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Client_Service__c</fullName>
        <label>Client Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Amy Schulz</fullName>
                </value>
                <value>
                    <fullName>Anne Pinney</fullName>
                </value>
                <value>
                    <fullName>Brendan Kearin</fullName>
                </value>
                <value>
                    <fullName>Dana Brink</fullName>
                </value>
                <value>
                    <fullName>Erin Kerns</fullName>
                </value>
                <value>
                    <fullName>Gina Giorgi</fullName>
                </value>
                <value>
                    <fullName>Hannah Strickland</fullName>
                </value>
                <value>
                    <fullName>Jim Youngblut</fullName>
                </value>
                <value>
                    <fullName>Kaitlyn Kanne</fullName>
                </value>
                <value>
                    <fullName>Lauren Alms</fullName>
                </value>
                <value>
                    <fullName>Lauren Hunter</fullName>
                </value>
                <value>
                    <fullName>Leah Stevens</fullName>
                </value>
                <value>
                    <fullName>Liz Schindler</fullName>
                </value>
                <value>
                    <fullName>Martha Capps</fullName>
                </value>
                <value>
                    <fullName>Rosie Seibert</fullName>
                </value>
                <value>
                    <fullName>Ryan Pederson</fullName>
                </value>
                <value>
                    <fullName>Simon Hyoun</fullName>
                </value>
                <value>
                    <fullName>Tracy Wedl</fullName>
                </value>
                <value>
                    <fullName>Vince Giorgi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACCOUNTING FIRMS</fullName>
                </value>
                <value>
                    <fullName>ADVERTISING</fullName>
                </value>
                <value>
                    <fullName>APPLIANCE COMPANY</fullName>
                </value>
                <value>
                    <fullName>APPRAISER</fullName>
                </value>
                <value>
                    <fullName>APARTMENT MANAGER</fullName>
                </value>
                <value>
                    <fullName>APARTMENT OWNERS</fullName>
                </value>
                <value>
                    <fullName>ARCHITECT</fullName>
                </value>
                <value>
                    <fullName>BUILDING INDUSTRY ASSOCIATION AND COUNCIL</fullName>
                </value>
                <value>
                    <fullName>ATTORNEY</fullName>
                </value>
                <value>
                    <fullName>BUILDERS</fullName>
                </value>
                <value>
                    <fullName>OTHER BUILDING PRODUCT MANUFACTURERS</fullName>
                </value>
                <value>
                    <fullName>LAND BROKER</fullName>
                </value>
                <value>
                    <fullName>CABINETS</fullName>
                </value>
                <value>
                    <fullName>RESEARCH CONSULTANT</fullName>
                </value>
                <value>
                    <fullName>DEVELOPER-COMMERCIAL</fullName>
                </value>
                <value>
                    <fullName>DEVELOPER-RESIDENTIAL LAND</fullName>
                </value>
                <value>
                    <fullName>DOORS MANUFACTURER</fullName>
                </value>
                <value>
                    <fullName>ELECTRICAL</fullName>
                </value>
                <value>
                    <fullName>ENGINEER</fullName>
                </value>
                <value>
                    <fullName>FAUCET MANUFACTURER</fullName>
                </value>
                <value>
                    <fullName>FLOORING MANUFACTURER</fullName>
                </value>
                <value>
                    <fullName>GOVERNMENT/CITY/COUNTY</fullName>
                </value>
                <value>
                    <fullName>HEATING, VENILATION, AIR CONDITIONING</fullName>
                </value>
                <value>
                    <fullName>HANLEY WOOD</fullName>
                </value>
                <value>
                    <fullName>INSULATION</fullName>
                </value>
                <value>
                    <fullName>INTERIOR DESIGNER</fullName>
                </value>
                <value>
                    <fullName>INVESTMENT BANKER (EQUITY)</fullName>
                </value>
                <value>
                    <fullName>LENDER/BANK</fullName>
                </value>
                <value>
                    <fullName>LUMBER</fullName>
                </value>
                <value>
                    <fullName>OTHER INDUSTRY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Date_was_changed_today_del__c</fullName>
        <label>Close Date was changed today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Month__c</fullName>
        <description>Close Month formula calculates the date of the first day of the month the Opportunity closed.</description>
        <formula>DATE(
     YEAR(CloseDate),
     MONTH(CloseDate),
     1
)</formula>
        <label>Close Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Checkbox_BPM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Won Checkbox - BPM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Won Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closing_Meeting_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closing Meeting Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closing_Plan_MS__c</fullName>
        <inlineHelpText>What is your plan to close the sale?</inlineHelpText>
        <label>Closing Plan-MS</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Commission_Total__c</fullName>
        <label>Commission Total</label>
        <summarizedField>Commission_Split__c.Commission_Percentage__c</summarizedField>
        <summaryForeignKey>Commission_Split__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <inlineHelpText>Are you committing to closing this opportunity?</inlineHelpText>
        <label>Committed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Upside</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitor-Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>360 Analytics</fullName>
                </value>
                <value>
                    <fullName>Belfiore</fullName>
                </value>
                <value>
                    <fullName>Bohlke</fullName>
                </value>
                <value>
                    <fullName>CDS Market Research</fullName>
                </value>
                <value>
                    <fullName>Concord Group</fullName>
                </value>
                <value>
                    <fullName>Core Logic</fullName>
                </value>
                <value>
                    <fullName>Costar</fullName>
                </value>
                <value>
                    <fullName>Gregory Group</fullName>
                </value>
                <value>
                    <fullName>Home Builders Research</fullName>
                </value>
                <value>
                    <fullName>House Canary</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>JBREC (John Burns)</fullName>
                </value>
                <value>
                    <fullName>Land Vision</fullName>
                </value>
                <value>
                    <fullName>Market Graphics</fullName>
                </value>
                <value>
                    <fullName>MarketNsight</fullName>
                </value>
                <value>
                    <fullName>Market Pointe</fullName>
                </value>
                <value>
                    <fullName>Market Track</fullName>
                </value>
                <value>
                    <fullName>McGraw Hill</fullName>
                </value>
                <value>
                    <fullName>Minich Strategies</fullName>
                </value>
                <value>
                    <fullName>MLS</fullName>
                </value>
                <value>
                    <fullName>MORE</fullName>
                </value>
                <value>
                    <fullName>Need Sales Input</fullName>
                </value>
                <value>
                    <fullName>No Competition</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>RCLCO</fullName>
                </value>
                <value>
                    <fullName>Real Estate Economics</fullName>
                </value>
                <value>
                    <fullName>RL Brown</fullName>
                </value>
                <value>
                    <fullName>Rose Residential Report</fullName>
                </value>
                <value>
                    <fullName>RSI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conceptual_Solution_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Conceptual solution fit to pain point</inlineHelpText>
        <label>Conceptual Solution Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conditions__c</fullName>
        <label>Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Connected_To_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connected To Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consult_Colab_Originator_Ownership__c</fullName>
        <formula>CASE( $User.Id ,
  New_REE_MS_Opp_Originator__r.Id,
 &apos;Me&apos;, 
  New_REE_MS_Opp_Collaborators__r.Id,
 &apos;Me&apos;,  
  New_Referring_DBD_Consulting__r.Id, 
 &apos;Me&apos;,
 &apos;Assigned&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consult/Colab/Originator Ownership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consulting_Referring_RD__c</fullName>
        <label>Consulting - Referring RD</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consumer_Segmentation_Value__c</fullName>
        <label>Consumer Segmentation $ Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name1__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name_Phone__c</fullName>
        <label>Contact Name Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity.Contact__c</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>HWM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Per_Unit_Average__c</fullName>
        <formula>Amount /  Total_of_Line_Items__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Unit Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Create_Portfolio__c</fullName>
        <formula>WF_Portfolio_ID__c==NULL &amp;&amp; !ISBLANK( AccountId )&amp;&amp;  Sync_to_Workfront__c ==True</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Portfolio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_Date_Only__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date - Date Only</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiration__c</fullName>
        <label>Credit Card Expiration</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Signature__c</fullName>
        <label>Credit Card Signature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>VISA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Memo_Approved__c</fullName>
        <inlineHelpText>Only Phillip, David, Dave, Lori or Wendi can check the memo is approved.</inlineHelpText>
        <label>Credit Request Approved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yes, SVP East</fullName>
                </value>
                <value>
                    <fullName>Yes, SVP West</fullName>
                </value>
                <value>
                    <fullName>Yes, SVP Sales</fullName>
                </value>
                <value>
                    <fullName>Yes, Sales Ops</fullName>
                </value>
                <value>
                    <fullName>Yes, Acctg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Memo_Form_attached__c</fullName>
        <label>Credit Memo Form attached</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Key__c</fullName>
        <label>Customer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBD_Override_Roll_Up__c</fullName>
        <label>DBD Override Roll-Up</label>
        <summarizedField>OpportunityLineItem.FC_DBD_Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.FC_Pay_DBD__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DBD_Paid_True__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DBD Paid = True</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DBD_Revenue__c</fullName>
        <formula>IF( AND(DBD_Override_Roll_Up__c = 0, DBD_Paid_True__c = False) , MetrostudyRevenue__c , DBD_Override_Roll_Up__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBD Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DST_Off_End_Date__c</fullName>
        <formula>IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2011&quot;, 
&quot;11/06/2011&quot;, 
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2012&quot;, 
&quot;11/04/2012&quot;, 
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2013&quot;, 
&quot;11/03/2013&quot;, 
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2014&quot;, 
&quot;11/02/2014&quot;, 
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2015&quot;, 
&quot;11/01/2015&quot;, 
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2016&quot;, 
&quot;11/06/2016&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2017&quot;, 
&quot;11/05/2017&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2018&quot;, 
&quot;11/04/2018&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2019&quot;, 
&quot;11/03/2019&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2020&quot;, 
&quot;11/01/2020&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2021&quot;, 
&quot;11/07/2021&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2022&quot;, 
&quot;11/06/2022&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2023&quot;, 
&quot;11/05/2023&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2024&quot;, 
&quot;11/03/2024&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2025&quot;, 
&quot;11/02/2025&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2026&quot;, 
&quot;11/01/2026&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2027&quot;, 
&quot;11/07/2027&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2028&quot;, 
&quot;11/05/2028&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2029&quot;, 
&quot;11/04/2029&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2030&quot;, 
&quot;11/03/2030&quot;,
&quot;Need More Dates&quot; 
))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DST Off End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DST_Off_Start_Date__c</fullName>
        <formula>IF(  
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2011&quot;, 
&quot;11/06/2011&quot;,
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2012&quot;, 
&quot;11/04/2012&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2013&quot;, 
&quot;11/03/2013&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2014&quot;, 
&quot;11/02/2014&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2015&quot;, 
&quot;11/01/2015&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2016&quot;, 
&quot;11/06/2016&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2017&quot;, 
&quot;11/05/2017&quot;,
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2018&quot;, 
&quot;11/04/2018&quot;,
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2019&quot;, 
&quot;11/03/2019&quot;,
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2020&quot;, 
&quot;11/01/2020&quot;,
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2021&quot;, 
&quot;11/07/2021&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2022&quot;, 
&quot;11/06/2022&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2023&quot;, 
&quot;11/05/2023&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2024&quot;, 
&quot;11/03/2024&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2025&quot;, 
&quot;11/02/2025&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2026&quot;, 
&quot;11/01/2026&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2027&quot;, 
&quot;11/07/2027&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2028&quot;, 
&quot;11/05/2028&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2029&quot;, 
&quot;11/04/2029&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2030&quot;, 
&quot;11/03/2030&quot;, 
&quot;Need More Dates&quot; 
))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DST Off Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DST_On_End_Date__c</fullName>
        <formula>IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2011&quot;, 
&quot;03/13/2011&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2012&quot;, 
&quot;03/11/2012&quot;, 
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2013&quot;, 
&quot;03/10/2013&quot;, 
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2014&quot;, 
&quot;03/09/2014&quot;, 
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2015&quot;, 
&quot;03/08/2015&quot;, 
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2016&quot;, 
&quot;03/13/2016&quot;, 
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2017&quot;, 
&quot;03/12/2017&quot;, 
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2018&quot;, 
&quot;03/11/2018&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2019&quot;, 
&quot;03/10/2019&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2020&quot;, 
&quot;03/08/2020&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2021&quot;, 
&quot;03/14/2021&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2022&quot;, 
&quot;03/13/2022&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2023&quot;, 
&quot;03/12/2023&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2024&quot;, 
&quot;03/10/2024&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2025&quot;, 
&quot;03/09/2025&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2026&quot;, 
&quot;03/08/2026&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2027&quot;, 
&quot;03/14/2027&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2028&quot;, 
&quot;03/12/2028&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2029&quot;, 
&quot;03/11/2029&quot;,
IF( 
MID(TEXT(HW_End_Date__c),1,4)=&quot;2030&quot;, 
&quot;03/10/2030&quot;,

&quot;Need More Dates&quot; 
))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DST On End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DST_On_Start_Date__c</fullName>
        <formula>IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2011&quot;, 
&quot;03/13/2011&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2012&quot;, 
&quot;03/11/2012&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2013&quot;, 
&quot;03/10/2013&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2014&quot;, 
&quot;03/09/2014&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2015&quot;, 
&quot;03/08/2015&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2016&quot;, 
&quot;03/03/2016&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2017&quot;, 
&quot;03/12/2017&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2018&quot;, 
&quot;03/11/2018&quot;,
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2019&quot;, 
&quot;03/10/2019&quot;,
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2020&quot;, 
&quot;03/08/2020&quot;,
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2021&quot;, 
&quot;03/14/2021&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2022&quot;, 
&quot;03/13/2022&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2023&quot;, 
&quot;03/12/2023&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2024&quot;, 
&quot;03/10/2024&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2025&quot;, 
&quot;03/09/2025&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2026&quot;, 
&quot;03/08/2026&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2027&quot;, 
&quot;03/14/2027&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2028&quot;, 
&quot;03/12/2028&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2029&quot;, 
&quot;03/11/2029&quot;, 
IF( 
MID(TEXT(HW_Start_Date__c),1,4)=&quot;2030&quot;, 
&quot;03/10/2030&quot;, 

&quot;Need More Dates&quot; 
))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DST On Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Conversion_OPY_Type__c</fullName>
        <label>Data Conversion OPY Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>RENEWAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Paid_Payment_Connect__c</fullName>
        <label>Date Paid - Payment Connect</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Buying_Process_Known__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the buyer aware about the buying process including constituencies and time</inlineHelpText>
        <label>Decision/Buying Process Known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decision_in_next_X_months__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Confirming with the customer that the decision will be made in the next X months</inlineHelpText>
        <label>Decision in next X months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_Me__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a Temp Field and Can be removed after 8/19</description>
        <label>Delete Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Did_client_receive_product__c</fullName>
        <label>Did client receive product?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Are_they_still_a_Customer__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Directors_Working_Joint_Opp__c</fullName>
        <label>REE/MS Opp Collaborators:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Anthony Crocco</fullName>
                </value>
                <value>
                    <fullName>Ben Sage</fullName>
                </value>
                <value>
                    <fullName>Bridget Berry</fullName>
                </value>
                <value>
                    <fullName>Brooke Burns</fullName>
                </value>
                <value>
                    <fullName>Budd Brumbaugh</fullName>
                </value>
                <value>
                    <fullName>Bud Rogers</fullName>
                </value>
                <value>
                    <fullName>Catherine LaFemina</fullName>
                </value>
                <value>
                    <fullName>Charles Schnuda</fullName>
                </value>
                <value>
                    <fullName>Chris Huecksteadt</fullName>
                </value>
                <value>
                    <fullName>Danny Ware</fullName>
                </value>
                <value>
                    <fullName>David Brown</fullName>
                </value>
                <value>
                    <fullName>David Cobb</fullName>
                </value>
                <value>
                    <fullName>Dennis Handler</fullName>
                </value>
                <value>
                    <fullName>Dennis Rickheeram</fullName>
                </value>
                <value>
                    <fullName>Dirk Neumann</fullName>
                </value>
                <value>
                    <fullName>Eric Allen</fullName>
                </value>
                <value>
                    <fullName>Eugene James</fullName>
                </value>
                <value>
                    <fullName>Former DBD/RD</fullName>
                </value>
                <value>
                    <fullName>Gail Lottie</fullName>
                </value>
                <value>
                    <fullName>Garrett Gray</fullName>
                </value>
                <value>
                    <fullName>Greg Gross</fullName>
                </value>
                <value>
                    <fullName>Jack Inselmann</fullName>
                </value>
                <value>
                    <fullName>Jay Colvin</fullName>
                </value>
                <value>
                    <fullName>Jeremy Walker</fullName>
                </value>
                <value>
                    <fullName>John Covert</fullName>
                </value>
                <value>
                    <fullName>John Mulville</fullName>
                </value>
                <value>
                    <fullName>John Spies</fullName>
                </value>
                <value>
                    <fullName>Lawrence Dean</fullName>
                </value>
                <value>
                    <fullName>Leslie Jenson</fullName>
                </value>
                <value>
                    <fullName>Maria Kolmetz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documented_Discovery_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the Discovery Data been documented in a sufficient manner that is easy to digest</inlineHelpText>
        <label>Documented &quot;Discovery Data&quot;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documented_Why__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Why is the buyer spending time &amp; energy thinking about this problem</inlineHelpText>
        <label>Documented &quot;Why&quot;?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Echosign_Subject__c</fullName>
        <formula>&quot;Metrostudy Agreement for &quot; &amp; Account.Name</formula>
        <label>Echosign Subject</label>
        <type>Text</type>
    </fields>
</CustomObject>